spacing issue
changed the margin bottom to 0

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -221,7 +221,7 @@ section.register {
 
 
 section.features .section-heading {
-  margin-bottom: 100px; }
+  margin-bottom: 0px; }
   section.features .section-heading h2 {
     margin-top: 0; }
   section.features .section-heading p {
